extra/build/logout_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /logout
    rewrite:
      uri: /authservice/logout
    route:
    - destination:
        host: authservice.istio-system.svc.cluster.local
        port:
          number: 8080
    headers:
      request:
        set:
          X-Auth-Request-Redirect: /authservice/logout?client_id=kubeflow-oidc-authservice&logout_uri=/
